[package]
name = "bogo"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
base64 = { workspace = true }
env_logger = { workspace = true }
nix = { workspace = true, features = ["signal"] }
rustls = { workspace = true }
rustls-aws-lc-rs = { workspace = true }
rustls-ring = { workspace = true }
webpki = { workspace = true }

[features]
default = []

[lints]
workspace = true
