[package]
name = "rustls-bench"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
clap = { workspace = true }
rustls = { workspace = true }
rustls-aws-lc-rs = { workspace = true, optional = true }
rustls-ring = { workspace = true, optional = true }
rustls-test = { workspace = true, default-features = false }

[features]
default = []
aws-lc-rs = ["rustls-aws-lc-rs"]
ring = ["dep:rustls-ring"]

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { workspace = true }

[lints]
workspace = true
