[package]
name = "rustls-provider-test"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR ISC OR MIT"
description = "Integration tests for Rustls cryptography providers"
publish = false

[dependencies]
hex = { workspace = true }
provider-example = { workspace = true }
rustls = { workspace = true, features = ["log"] }
rustls-aws-lc-rs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
